--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
 <div>
   <h1>Going to the movies</h1>
-  <p>One of my favorite thing to do is go to the movies.</p>
+  <p>One of my favorite things to do is go to the movies.</p>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgGSVA5j9MLGEb3XueeVKfI07bqBCe77XtEg&usqp=CAU" height="200" width="200">
   <div>
     <h2>My top 3 favorite movies are: </h2>
